[B2BP-207] Fix overlapping button by enabling the hamburger menu starting from lg screens

--- a/_sass/offcanvas.scss
+++ b/_sass/offcanvas.scss
@@ -1,4 +1,4 @@
-@media (max-width: 767.98px) {
+@media (max-width: $grid-breakpoints-lg) {
   .offcanvas-collapse {
     background-color: #FFF;
     top: 50px;
